	  src/widgets/paint-selector.h, src/widgets/spinbutton-events.h,
	  src/widgets/spw-utilities.h, src/xml/repr-action.h:
	  Add missing header files.

	* src/libnr/nr-rotate-fns.h, src/libnr/nr-rotate-fns.cpp: New files.
	* src/libnr/nr-rotate-fns-test.cpp: New unit test.
	* src/libnr/Makefile_insert, src/Makefile.am: Reference new files,
	  add to unit tests.

	* src/libnr/nr-point-fns.h (point_equalp): New function.

	* src/radial.h: Remove this unused header.

	* src/xml/xml-forward.h: New file.
	* src/xml/Makefile_insert: Add it to xml_libspxml_a_SOURCES.
	* src/xml/repr-private.h: Include it.

2004-05-16  MenTaLguY  <mental@rydia.net>

	* src/libnrtype/nr-type-directory.cpp, src/libnrtype/nr-type-ft2.cpp,
	  src/libnrtype/nr-type-ft2.h, src/libnrtype/nr-type-gnome.h,
	  src/libnrtype/nr-type-w32.h, src/libnrtype/nr-type-xft.cpp,
	  src/libnrtype/nr-typeface.h:

	  transition to C++ inheritance

2004-05-15  MenTaLguY  <mental@rydia.net>

	* src/display/nr-arena-shape.h, src/display/nr-arena-shape.cpp:
	  further reduced dependency on SPStyle

2004-05-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-path.cpp, src/libnr/nr-path.h (nr_path_matrix_bbox_union):
	  Get rid of no-longer-needed tolerance arg.  Update callers.

	* src/selection.cpp, src/sp-chars.cpp, src/sp-image.cpp,
	  src/sp-item-group.cpp, src/sp-item.cpp, src/sp-item.h,
	  src/sp-marker.cpp, src/sp-root.cpp, src/sp-shape.cpp,
	  src/sp-symbol.cpp, src/sp-text.cpp, src/sp-typeset.cpp,
	  src/sp-use.cpp, src/dialogs/fill-style.cpp,
	  src/dialogs/stroke-style.cpp, src/display/nr-arena-shape.cpp,
	  src/libnr/nr-path.cpp, src/libnr/nr-path.h,
	  src/libnrtype/nr-font.cpp, src/libnrtype/nr-rasterfont.cpp,
	  src/libnrtype/nr-type-gnome.cpp, src/widgets/icon.cpp,
	  src/widgets/paint-selector.cpp:
	  Change argument from NRMatrix to NR::Matrix in SPItemClass->bbox,
	  sp_item_invoke_bbox, sp_item_invoke_bbox_full,
	  nr_path_matrix_bbox_union.  Users updated.
